# eigenwallet-admin

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PLAN.md  README.md  diesel.toml  justfile  tailwind.config.js
.github/workflows/: build.yml
docs/: RECYCLE.md
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2026-05-10-000001_initial/: down.sql  up.sql
migrations/2026-05-12-000001_competitor_version/: down.sql  up.sql
migrations/2026-05-12-000002_capital_usd_asset/: down.sql  up.sql
migrations/2026-05-12-000003_spread_optimizer/: down.sql  up.sql
migrations/2026-05-18-000001_balance_snapshots_kraken/: down.sql  up.sql
src/: app.rs  lib.rs  main.rs  types.rs
src/components/: chart.rs  mod.rs  nav.rs  tile.rs
src/pages/: charts.rs  competitors.rs  health.rs  login.rs  mod.rs  not_found.rs  overview.rs  roi.rs  spread.rs  swaps.rs  wallet_rules.rs
src/server/: auth.rs  db.rs  kube_client.rs  mod.rs  models.rs  schema.rs  state.rs  wallet_rules.rs
src/server/api/: capital.rs  charts.rs  competitors.rs  health.rs  maker.rs  market.rs  mod.rs  overview.rs  roi.rs  spread.rs  spread_optimizer.rs  swaps.rs  version.rs  wallet_rules.rs
src/server/clients/: asb.rs  cex.rs  electrs.rs  kraken_ohlc.rs  kraken_private.rs  mod.rs  monerod.rs
src/server/pollers/: balance_snapshot.rs  cex_prices.rs  competitor_scan.rs  kraken_backfill.rs  log_tail.rs  mod.rs  snapshot_backfill.rs  spread_optimizer.rs  swap_sync.rs
style/: tailwind.css
tests/e2e/: bugs.spec.ts  helpers.ts  package-lock.json  package.json  playwright.config.ts
tests/e2e/test-results/: .last-run.json
tests/e2e/test-results/bugs-UI-bugs-from-operator-015e8-leted-returns-non-zero-rows-chromium/: error-context.md
tests/e2e/test-results/bugs-UI-bugs-from-operator-64e30-hart-has-no-zero-total-dips-chromium/: error-context.md
tests/e2e/test-results/bugs-UI-bugs-from-operator-6ac7c-s-with-a-recommended-action-chromium/: error-context.md
tests/e2e/test-results/bugs-UI-bugs-from-operator-7b082-p-text-for-unfamiliar-tiles-chromium/: error-context.md
tests/e2e/test-results/bugs-UI-bugs-from-operator-7d452-pulated-for-completed-swaps-chromium/: error-context.md
tests/e2e/test-results/bugs-UI-bugs-from-operator-89bcd-t-the-request-must-be-sent--chromium/: error-context.md
tests/e2e/test-results/bugs-UI-bugs-from-operator-e9493-alue-chart-has-no-zero-dips-chromium/: error-context.md
tests/e2e/test-results/bugs-UI-bugs-from-operator-ee862-ge-highlights-our-maker-row-chromium/: error-context.md
tests/e2e/test-results/bugs-UI-bugs-from-operator-fd29e-rows-when-there-are-refunds-chromium/: error-context.md
