[package]
name = "eigenwallet-admin"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "eigenwallet-admin"
path = "src/main.rs"
required-features = ["ssr"]

[[bin]]
name = "seed-admin"
path = "src/bin/seed_admin.rs"
required-features = ["ssr"]

[dependencies]
# ---- always-on (shared between ssr + hydrate) ----
leptos = "0.8"
leptos_meta = "0.8"
leptos_router = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
thiserror = "2"
rust_decimal = { version = "1", features = ["serde-with-str", "maths", "db-diesel2-postgres"] }
rust_decimal_macros = "1"
http = "1"
cfg-if = "1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["DomRect", "Element", "MouseEvent"] }
console_error_panic_hook = { version = "0.1", optional = true }

# ---- ssr-only ----
leptos_axum = { version = "0.8", optional = true }
axum = { version = "0.8", features = ["macros", "ws"], optional = true }
tower = { version = "0.5", features = ["util"], optional = true }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"], optional = true }
tower-sessions = { version = "0.15", features = ["signed"], optional = true }
tower_governor = { version = "0.8", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "signal", "time", "io-util"], optional = true }
tokio-stream = { version = "0.1", optional = true }
diesel = { version = "2.3", features = ["postgres", "uuid", "chrono", "serde_json"], optional = true }
diesel-async = { version = "0.9", features = ["postgres", "bb8"], optional = true }
diesel_migrations = { version = "2.3", optional = true }
argon2 = { version = "0.5", optional = true }
rand = { version = "0.8", optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }
jsonrpsee = { version = "0.26", features = ["http-client", "macros", "client-core"], optional = true }
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false, optional = true }
kube = { version = "3", features = ["client", "runtime", "rustls-tls"], default-features = false, optional = true }
k8s-openapi = { version = "0.27", features = ["latest"], optional = true }
# rustls 0.23 requires explicit CryptoProvider::install_default() unless
# exactly one of `ring`/`aws-lc-rs` is feature-enabled. We install ring at
# startup; bring it in directly so it's controllable from one place.
rustls = { version = "0.23", default-features = false, features = ["ring", "std"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"], optional = true }
toml_edit = { version = "0.25", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
anyhow = { version = "1", optional = true }
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
notify = { version = "8", optional = true }
electrum-client = { version = "0.25", optional = true }
dotenvy = { version = "0.15", optional = true }
serde_yaml_ng = { version = "0.10", optional = true }

[features]
default = ["ssr"]
hydrate = [
  "leptos/hydrate",
  "dep:console_error_panic_hook",
]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:leptos_axum",
  "dep:axum",
  "dep:tower",
  "dep:tower-http",
  "dep:tower-sessions",
  "dep:tower_governor",
  "dep:tokio",
  "dep:tokio-stream",
  "dep:diesel",
  "dep:diesel-async",
  "dep:diesel_migrations",
  "dep:argon2",
  "dep:rand",
  "dep:uuid",
  "dep:jsonrpsee",
  "dep:reqwest",
  "dep:kube",
  "dep:k8s-openapi",
  "dep:tracing",
  "dep:tracing-subscriber",
  "dep:toml_edit",
  "dep:clap",
  "dep:anyhow",
  "dep:async-trait",
  "dep:futures",
  "dep:notify",
  "dep:electrum-client",
  "dep:dotenvy",
  "dep:rustls",
  "dep:serde_yaml_ng",
]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1

[package.metadata.leptos]
output-name = "eigenwallet-admin"
# Two binaries are defined (eigenwallet-admin = the server, seed-admin = CLI);
# tell cargo-leptos which one is the SSR server.
bin-target = "eigenwallet-admin"
site-root = "target/site"
site-pkg-dir = "pkg"
tailwind-input-file = "style/tailwind.css"
# Tailwind v4 is CSS-first; no tailwind.config.js. Source globs are declared
# inline in style/tailwind.css via @source directives.
assets-dir = "public"
site-addr = "0.0.0.0:4000"
reload-port = 3001
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
